codegen/ui_tests/export_mod_junk_arg.stderr
error: expecting identifier
  --> ui_tests/export_mod_junk_arg.rs:11:11
   |
11 | #[rhai_fn("wheeeee")]
   |           ^^^^^^^^^
